<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/artist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop = "5dp"
    android:layout_marginLeft = "5dp"
    android:layout_marginRight = "5dp"
    android:paddingTop = "10dp"
    android:paddingBottom = "10dp"
    android:background="#94CD3338">

    <TextView
        android:id="@+id/Title"
        android:layout_width="140dp"
        android:layout_height="73dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="0dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/Artist"
        android:layout_width="110dp"
        android:layout_height="66dp"
        android:layout_centerInParent="true"
        android:text="@string/artist"
        android:textAlignment="center"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/Album"
        android:layout_width="120dp"
        android:layout_height="67dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="25dp"
        android:layout_toEndOf="@+id/Artist"
        android:text="@string/album"
        android:textAlignment="center"
        android:textColor="#FFFFFF"/>

</RelativeLayout>