<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/footer_menu"
        android:layout_width="410dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/player"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="149dp"
            android:layout_height="57dp"
            android:layout_weight="0"

            android:text="@string/now_playing" />

        <Button
            android:id="@+id/tracks"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="0"

            android:text="@string/track_list" />

        <Button
            android:id="@+id/albums"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="112dp"
            android:layout_height="57dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0"
            android:text="@string/albums"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>